--- a/src/modules/Configure/_redirect.ini
+++ b/src/modules/Configure/_redirect.ini
@@ -1,2 +1,2 @@
 [Redirect]
-config_location=\Documents\Lab Inspections\Glovebox and hood inspection documents\Program\config.ini
+config_location=C:\Users\nhorn\Documents\Lab Inspections\Glovebox and hood inspection documents\Program\config.ini
